[package]
name = "recover"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
clap = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "recover"
path = "src/lib.rs"

[[bin]]
name = "recover"
path = "app/main.rs"
